# langchain-benchmarks

./: .buildinfo  .gitignore  LICENSE  Makefile  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/notebooks/: datasets.doctree  getting_started.doctree  models.doctree  run_without_langsmith.doctree
.doctrees/notebooks/extraction/: chat_extraction.doctree  email.doctree  high_cardinality.doctree  intro.doctree
.doctrees/notebooks/retrieval/: comparing_techniques.doctree  intro.doctree  langchain_docs_qa.doctree
.doctrees/notebooks/tool_usage/: benchmark_all_tasks.doctree  intro.doctree  multiverse_math.doctree  multiverse_math_benchmark.doctree  query_analysis.doctree  relational_data.doctree  typewriter_1.doctree  typewriter_26.doctree
.github/workflows/: _benchmarks.yml  _lint.yml  _pydantic_compatibility.yml  _release.yml  ci.yml  doc_publish.yaml  release.yml  tool_benchmarks.yml
_scripts/: add_collab_links.py
_sources/: index.md
_sources/notebooks/: getting_started.ipynb  models.ipynb  run_without_langsmith.ipynb
_sources/notebooks/extraction/: chat_extraction.ipynb  email.ipynb  high_cardinality.ipynb
_sources/notebooks/tool_usage/: benchmark_all_tasks.ipynb  multiverse_math.ipynb  multiverse_math_benchmark.ipynb  query_analysis.ipynb  relational_data.ipynb  typewriter_1.ipynb  typewriter_26.ipynb
_static/: documentation_options.js
agents/: README.md  __init__.py  adapters.py  agent.py  encoder.py  evaluators.py  example_traces.py  factory.py  model_registry.py  parser.py  pyproject.toml  render.py  throttle.py  tool_utils.py
agents/environments/: e01_alpha.py  env_1_alpha.py  giggling_cat.py
agents/tests/: test_adapters.py  test_lagnchain_adapter.py  test_parsers.py
agents/tests/encoding/: test_typescript_encoding.py
agents/tests/parsing/: test_typescript_encoding.py  test_xml_encoding.py
archived/csv-qa/: README.md  custom_agent.py  data.csv  pandas_agent_gpt_35.py  pandas_agent_gpt_4.py  pandas_agent_instruct.py  pandas_ai.py  streamlit_app.py
archived/extraction/: requirements.txt  streamlit_app.py
archived/langchain-docs-benchmarking/: prepare_dataset.py  run_evals.py  run_experiments.py
archived/langchain-docs-benchmarking/app/: server.py
archived/meta-evals/: README.md
archived/meta-evals/correctness/: _upload_dataset.py
csv-qa/: README.md  custom_agent.py  openai_functions_agent_fix.py  pandas_agent_gpt_35.py  pandas_agent_gpt_4.py  pandas_agent_instruct.py  pandas_ai.py  requirements.txt  streamlit_app.py  upload_data.py  vertex_custom_agent.py  vertex_custom_agent_llm.py
csv-qa/titanic_data/: index.pkl
docs/source/: .gitignore  conf.py  index.md  toc.segment
docs/source/examples/: image_manipulation.ipynb
docs/source/notebooks/: datasets.ipynb  extraction.ipynb  getting_started.ipynb  models.ipynb  rag.ipynb  rag_evaluations.ipynb  rag_langchain_docs.ipynb  rag_semi_structured.ipynb  run_without_langsmith.ipynb  tool_usage.ipynb  tool_usage_multiverse_math.ipynb  tool_usage_typewriter_1.ipynb  tool_usage_typewriter_26.ipynb
extraction/: eval_extraction.ipynb  oppenheimer.txt  oppenheimer_short.txt  requirments.txt  streamlit_app.py
langchain-docs/: test.py
langchain-docs-benchmarking/: README.md  _run_experiments.py  example_custom_chain.py  example_custom_config.json  main.py  prepare_dataset.py  pyproject.toml  run_evals.py  run_experiments.py
langchain-docs-benchmarking/app/: server.py
langchain_benchmarks/: .gitignore  __init__.py  model_registration.py  rate_limiting.py  registration.py  schema.py  throttle.py
langchain_benchmarks/agents/: README.md  evaluators.py
langchain_benchmarks/agents/environments/: e01_alpha.py
langchain_benchmarks/extraction/: __init__.py  email_task.py  evaluators.py  implementations.py  utils.py
langchain_benchmarks/extraction/tasks/: email_task.py
langchain_benchmarks/rag/: __init__.py  evaluators.py  lcdocs_oai_record_manager.sql  registration.py
langchain_benchmarks/rag/tasks/: __init__.py
langchain_benchmarks/rag/utils/: _downloading.py  indexing.py
langchain_benchmarks/tool_usage/: README.md  __init__.py  agents.py  evaluators.py  multiverse_math.py  prompts.py  registration.py  relational_data.py  type_writer.py  type_writer_26_funcs.py
langchain_benchmarks/tool_usage/agents/: __init__.py  adapters.py  anthropic_tool_agent.py  anthropic_tool_user.py  base.py  openai_assistant.py  openai_functions.py  runnable_agent.py  tool_using_agent.py
langchain_benchmarks/tool_usage/environments/: alpha.py  multiverse_math.py  relational_data.py  type_writer.py  type_writer_26_funcs.py
langchain_benchmarks/tool_usage/tasks/: extraction_query.py  multiverse_math.py  query_analysis.py  relational_data.py  type_writer.py  type_writer_26_funcs.py
langchain_benchmarks/utils/: __init__.py  _langsmith.py  _registration.py
meta-evals/correctness/: README.md  _upload_dataset.py  test_correctness_evaluator.py
meta-evals/correctness/data/: Opus100-incorrect.json  Opus100.json  Web-Q&A-Dataset-Correct.json  carb-IE-incorrect.json
meta-evals/criteria/: test_criteria_evaluator.py
notebooks/: datasets.html  getting_started.html  models.html  run_without_langsmith.html
notebooks/extraction/: chat_extraction.html  email.html  high_cardinality.html  intro.html
notebooks/retrieval/: comparing_techniques.html  intro.html  langchain_docs_qa.html
notebooks/retrieval/multi_modal_benchmarking/: multi_modal_eval.html  (+1 more)
notebooks/tool_usage/: benchmark_all_tasks.html  intro.html  multiverse_math.html  multiverse_math_benchmark.html  query_analysis.html  relational_data.html  typewriter_1.html  typewriter_26.html
scripts/: check_datasets.py  extract_task.py  multiverse_math_benchmark.py  multiverse_math_task.py  query_analysis_benchmark.py  tool_benchmarks.py
tests/agents/: test_agents.py
tests/rag/: __init__.py  test_langchain_docs.py
tests/unit_tests/: test_model_registry.py  test_public_api.py  test_rate_limiting.py  test_utils.py
(+113 files in other folders)
